a small modification to the dashboard to add the dash key and move it up a bit, and a change to the obstacle spawning to keep them away from the edges of the world. Also a change to the vehicle to increase the minimum speed limit so it doesn't get too slow.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wander Race – Cosmic Derby</title>
-    <meta name="description" content="An endless cosmic racing game with steering behaviors">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>">
-    <link rel="stylesheet" href="style.css">
+    <meta
+      name="description"
+      content="An endless cosmic racing game with steering behaviors"
+    />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>"
+    />
+    <link rel="stylesheet" href="style.css" />
     <!-- p5.js CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Scripts in dependency order -->
     <script src="Vehicle.js"></script>
     <script src="PlayerVehicle.js"></script>
@@ -24,5 +30,5 @@
     <script src="Obstacle.js"></script>
     <script src="SoundManager.js"></script>
     <script src="sketch.js"></script>
-</body>
+  </body>
 </html>
