last modification mobile size

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title>Wander Race – Cosmic Derby</title>
     <meta
       name="description"
@@ -20,7 +22,16 @@
   <body>
     <!-- Scripts in dependency order -->
     <script src="Vehicle.js"></script>
+    <script src="PlayerProfile.js"></script>
+    <script src="GameModeManager.js"></script>
+    <script src="Zone.js"></script>
     <script src="PlayerVehicle.js"></script>
+    <script src="SpatialHashGrid.js"></script>
+    <script src="SocialManager.js"></script>
+    <script src="MobileManager.js"></script>
+    <script src="TutorialManager.js"></script>
+    <script src="UIManager.js"></script>
+    <script src="NetworkManager.js"></script>
     <script src="AIVehicle.js"></script>
     <script src="Checkpoint.js"></script>
     <script src="Star.js"></script>
